2008-05-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/grid.h, src/grid.cpp,
	include/openbabel/griddata.h, src/griddata.cpp: Some 'const'
	updates.

	* src/formats/adfformat.cpp: Update to use OBGridData rather than
	custom T41Data class.

2008-05-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/java/OBTest.java: Bring back test program.

	* scripts/openbabel-java.i, scripts/openbabel-perl.i,
	scripts/openbabel-ruby.i: Fix script bindings. Now compile
	cleanly. Perl still needs work to pass tests.

	* include/openbabel/math/spacegroup.h, include/openbabel/plugin.h:
	Minor updates for SWIG compatibility.

	* src/formats/Makefile.*: Add xtcformat.cpp.

	* src/formats/xtcformat.cpp: Add rpc/types.h for Mac
	compatibility.

2008-05-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Added functions
	to temporarily ignore or fix an atom. This allows interactive programs
	to use this while drawing (no repulsion between your new atom and the
	fragment you want to connect to. 

	* src/forcefields/forcefield*.cpp: Same

2008-05-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/CMakeList.txt: Add xtc format for non-WIN32 platforms.

2008-05-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/obconversion.cpp: save the filename in ReadFile (needed for xtc
	format).

2008-05-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/xtcformat.cpp: Portable compressed trajectory file
	format. Used by gromacs. Since there is no real API to handle
	trajectories at the moment, ReadMolecule is used. Instead of
	CastAndClear, the OBBase object is only cast to an OBMol object to
	which conformers are added for each frame. Box, step and time are
	currently ignored. Currently read only. (Avogadro implementation)

	* Makefiles: NOT updated yet, from looking at the gromacs source, it
	seems that the XDR stuff needs special handling on windows and I don't